<resources>
    <string name="app_name">LFG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday_select_gameplay_hours">Monday: Select Gameplay Hours</string>
    <string name="_2am_3am">2AM-3AM</string>
    <string name="_4am_5am">4AM-5AM</string>
    <string name="_8pm_9pm">8PM-9PM</string>
    <string name="_8am_9am">8AM-9AM</string>
    <string name="_6am_7am">6AM-7AM</string>
    <string name="_10am_11am">10AM-11AM</string>
    <string name="_9am_10am">9AM-10AM</string>
    <string name="_12am_1pm">12AM-1PM</string>
    <string name="_3am_4am">3AM-4AM</string>
    <string name="_7am_8am">7AM-8AM</string>
    <string name="_11am_12am">11AM-12AM</string>
    <string name="_5am_6am">5AM-6AM</string>
    <string name="_1am_2am">1AM-2AM</string>
    <string name="_12pm_1am">12PM-1AM</string>
    <string name="_10pm_11pm">10PM-11PM</string>
    <string name="_6pm_7pm">6PM-7PM</string>
    <string name="_4pm_5pm">4PM-5PM</string>
    <string name="_2pm_3pm">2PM-3PM</string>
    <string name="_9pm_10pm">9PM-10PM</string>
    <string name="_1pm_2pm">1PM-2PM</string>
    <string name="_5pm_6pm">5PM-6PM</string>
    <string name="_7pm_8pm">7PM-8PM</string>
    <string name="_3pm_4pm">3PM-4PM</string>
    <string name="_11pm_12pm">11PM-12PM</string>
    <string name="tuesday_select_gameplay_hours">Tuesday: Select Gameplay Hours</string>
    <string name="wednesday_select_gameplay_hours">Wednesday: Select Gameplay Hours</string>
    <string name="thursday_select_gameplay_hours">Thursday: Select Gameplay Hours</string>
    <string name="friday_select_gameplay_hours">Friday: Select Gameplay Hours</string>
    <string name="saturday_select_gameplay_hours">Saturday: Select Gameplay Hours</string>
    <string name="sunday_select_gameplay_hours">Sunday: Select Gameplay Hours</string>
    <string name="signout">SignOut</string>
    <string name="settings">Settings</string>
    <string name="matches">Find Matches</string>
    <string name="timetable">TimeTable</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="app_logo">App Logo</string>
    <string name="password_6_characters_or_more">Password - 6 Characters or more</string>
    <string name="email_e_g_example_gmail_com">Email - e.g. example@gmail.com</string>
    <string name="name">name</string>
    <string name="fortnite">Fortnite</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="team_fortress_2">Team Fortress 2</string>
    <string name="roblox">Roblox</string>
    <string name="minecraft">Minecraft</string>
    <string name="marvel_s_avengers">Marvel\'s Avengers</string>
    <string name="among_us">Among Us</string>
    <string name="final_fantasy_xiv">Final Fantasy XIV</string>
    <string name="fetch">Fetch</string>
    <string name="view">View Matches</string>
    <string name="gamerTags">Gamer Tags</string>
    <string name="nomatchesyet">No Matches yet!</string>
    <string name="discord_tag">Discord Tag</string>
    <string name="submit">Submit</string>
    <string name="change_profile_settings">Change profile settings</string>
    <string name="custom_games">Custom Games</string>
    <string name="tf2_class_and_rank">TF2 Class and Rank</string>
    <string name="minecraft_server_address">Minecraft Server Address</string>
    <string name="casual">Casual</string>
    <string name="competitive">Competitive</string>
    <string name="ffxiv_server_and_free_company">FFXIV Server and Free Company</string>
    <string name="achievement_hunter">Achievement Hunter</string>
    <string name="pve_focused">PVE Focused</string>
    <string name="co_op_focused">Co-op Focused</string>
</resources>