<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/password"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_6_characters_or_more"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gamerTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/gamerTags"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_e_g_example_gmail_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamerTags"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/FFXIV"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginStart="38dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/final_fantasy_xiv"
        app:layout_constraintBottom_toTopOf="@+id/Amongus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fortnite"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/TwoFort"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginEnd="50dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/team_fortress_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Minecraft"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/LOL"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginStart="38dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/league_of_legends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Amongus"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/Avengers"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginEnd="38dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/marvel_s_avengers"
        app:layout_constraintBottom_toTopOf="@+id/Roblox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/Minecraft"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginEnd="92dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/minecraft"
        app:layout_constraintBottom_toTopOf="@+id/TwoFort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Roblox"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/Amongus"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginStart="38dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/among_us"
        app:layout_constraintBottom_toTopOf="@+id/LOL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FFXIV" />

    <CheckBox
        android:id="@+id/Roblox"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginEnd="109dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/roblox"
        app:layout_constraintBottom_toTopOf="@+id/Minecraft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Avengers"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/Fortnite"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginStart="38dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/fortnite"
        app:layout_constraintBottom_toTopOf="@+id/FFXIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/enterRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>